--- a/react15/package.json
+++ b/react15/package.json
@@ -4,7 +4,7 @@
   "description": "Compare React 16 perf improvements",
   "main": "index.js",
   "scripts": {
-    "start": "cd dist && node server.js",
+    "start": "npm run webpack && cd dist && node server.js",
     "test": "npm run test",
     "webpack": "webpack"
   },
