--- a/react16/package.json
+++ b/react16/package.json
@@ -4,7 +4,7 @@
   "description": "Compare React 16 perf improvements",
   "main": "index.js",
   "scripts": {
-    "start": "cd dist && node server.js",
+    "start": "npm run webpack && cd dist && node server.js",
     "test": "npm run test",
     "webpack": "webpack"
   },
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.1",
-    "fastify": "^0.29.2",
+    "fastify": "^0.38.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
@@ -20,9 +20,12 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.11.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^1.0.0",
     "json-loader": "^0.5.4",
-    "webpack": "^3.6.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "style-loader": "^0.23.1",
+    "webpack": "4.3.0",
+    "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.6.0"
   }
 }
