--- a/react16/package.json
+++ b/react16/package.json
@@ -14,12 +14,15 @@
     "express": "^4.16.1",
     "fastify": "^0.38.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-loadable": "^5.5.0"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^7.1.2",
-    "babel-preset-react": "^6.11.1",
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "json-loader": "^0.5.4",
     "mini-css-extract-plugin": "^0.4.4",
